# phue

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: connect_bridge.py  flicker.py  hue-rainbow.py  random_colors.py  rgb_colors.py  sine_wave_lights.py  tk_gui_complex.py  tk_gui_hsb.py  tk_gui_simple.py
examples/repros/: smart_home.py
src/phue/: __init__.py  __main__.py  bridge.py  group.py  light.py  sensor.py
src/phue2/: __init__.py  __main__.py  bridge.py  exceptions.py  group.py  light.py  scene.py  sensor.py
src/phue2/_internal/: __init__.py  console.py
tests/: samples.py  test_basic_import.py  test_bridge.py  test_cli.py  test_request.py  test_scene.py
