[project]
name = "phue2"
dynamic = ["version"]
description = "A Philips Hue Python library"
authors = [{ name = "Nathanaël Lécaudé" }, { name = "Nathan Nowack" }]
dependencies = ["httpx"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
phue = "phue2.__main__:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.5",
    "pytest-flakefinder",
    "pytest-xdist>=3.6.1",
    "ruff",
    "copychat>=0.5.2",
    "ipython>=8.12.3",
    "pdbpp>=0.10.3",
    "respx>=0.22.0",
]


[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phue2"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
metadata = false


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = []


[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    ".git",
    "dist",
    "*.egg-info",
]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001", "RUF013"]
